resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zk-rest-proxy-service
  namespace: semoss
spec:
  selector:
    app: zk-rest-proxy
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
