resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zk-rest-proxy-ingress
  namespace: semoss
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - workshop.cfg.deloitte.com
    secretName: workshop-tls
  rules:
  - host: workshop.cfg.deloitte.com
    http:
      paths:
      - path: /zk-api/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: zk-rest-proxy-service
            port:
              number: 80
